[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/frog/frogUnshaded.png" type="Texture" id=1]
[ext_resource path="res://src/Characters/DetectiveFrog/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Characters/DetectiveFrog/LeapController.gd" type="Script" id=3]
[ext_resource path="res://assets/frog/New Piskel-1.png (4)-1.png_n.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/effects/jump.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="LeapController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="Left" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Right" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -23.952
pitch_scale = 3.76

[node name="LeapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
